# airflow-demo

./: .airflowignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
weather_metrics/dags/: dag_temperature_metrics.py
weather_metrics/operators/: open_meteo.py
weather_metrics/utils/: callbacks.py  cities.py  temperature_helpers.py
